# zap-eos-api

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  clear.sh  cmake_install.cmake  dispatcher.abi  dispatcher.cpp  dispatcher.hpp  docker-compose.yml  eos.dockerfile  main.abi  makefile  makefile.self  package-lock.json  package.json  provider_json  readme.md  rebuild.sh  registry.abi  registry.cpp  registry.hpp  registry.wasm  registry.wast
abi/: main.abi
src/: arbiter.cpp  arbiter.hpp  bondage.cpp  bondage.hpp  contest.cpp  contest.hpp  database.hpp  dispatcher.cpp  dispatcher.hpp  embedded_token.cpp  embedded_token.hpp  main.cpp  main.hpp  registry.cpp  registry.hpp  td_factory.cpp  td_factory.hpp
test/: environment.js  test.js
test/eos/: account.js  deployer.js  eosnode.js  eventreader.js  transaction.js
